--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
     </main>
 
-    <section class="container_2">
+    <section class="container_2" id="habilidades">
 
-        <section class="container_conteudo container_habilidades" id="habilidades">
+        <section class="container_conteudo container_habilidades" >
             <div class="container_habilidades_imagem">
                 <img src="./assets/imagem photoshop.jpg" alt="imagem logo photoshop" class="imagem_habilidades">
             </div>
@@ -234,5 +234,6 @@
         window.scrollTo({ top: 0, behavior: 'smooth' });
     });
 </script>
+
 
 </html>
